# Ushionn

./: .gitignore  CMakeLists.txt  README.md
docs/design/: architecture.md  tensor_class.md
include/: tensor.h
include/core/: common.h  error_codes.h  tensor.h
include/cuda/: cuda_utils.h
include/layers/: activation.h  layers.h
include/model/: model.h
kernels/: CMakeLists.txt  main.cu  main.cuh
lib/: CMakeLists.txt
src/: CMakeLists.txt  activation.cu  activation.h  constant.cuh  layers.cu  layers.cuh  layers.h  model.cu  model.cuh  model.h  tensor.cu  tensor.cuh  tensor.h  tensor_test.cpp  test.cpp
src/core/: common.cpp  tensor.cpp
src/cuda/: cuda_utils.cu  tensor.cu
src/layers/: layers.cpp
src/main/: main.cpp
src/model/: model.cpp
src/tensor/: CMakeLists.txt  constant.cu  tensor.cu  tensor.cuh  tensor.h  test.cpp
src/test/: CMakeLists.txt  test.cpp
tests/: perceptron.cpp  test_model.cpp  test_tensor.cpp
